--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -190,9 +190,9 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-12  shadow-sm table-responsive">
                             <h3>Sales Details</h3>
-                            <table id="salesTable" class="table table-striped">
+                            <table id="salesTable" class="table table-striped border shadow-sm">
                                 <thead>
                                     <tr>
                                         <th>Order ID</th>
@@ -207,7 +207,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                   
+                                   <!-- data generating by js -->
                                 </tbody>
                             </table>
                         </div>
