--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -605,6 +605,7 @@
                                         <li class="breadcrumb-item"><a href="/">Home</a></li>
                                         <li class="breadcrumb-item active" aria-current="page">Profile</li>
                                     </ol>
+                                    <button class="btn">Wallet</button>
                                 </nav>
                             </div>
                             <div class="row rowMod-1 flex-column rounded-4">
