--- a/views/user/orderHistoryDetails.ejs
+++ b/views/user/orderHistoryDetails.ejs
@@ -74,9 +74,10 @@
                             <p class="mt-3">Order Status: <%= checkout.orderStatus %></p>
                         </div>
                         <div>
-                            <!-- cancel disabled js -->
                             <% if (checkout.orderStatus === "Processing") { %>
                                 <button class="btn btn-danger px-5" onclick="confirmCancel('<%= checkout._id %>')">Cancel</button>
+                            <% } else if (checkout.orderStatus === "Delivered") { %>
+                                <button class="btn btn-primary px-5" onclick="confirmReturn('<%= checkout._id %>')">Return</button>
                             <% } %>
                             
                            
@@ -91,6 +92,70 @@
 
 
    <script>
+
+
+
+function confirmReturn(orderId) {
+    Swal.fire({
+        title: 'Return this order?',
+        text: "Are you sure you want to return this order?",
+        icon: 'question',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, return it!'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            fetch(`/returnOrder/${encodeURIComponent(orderId)}`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    Swal.fire(
+                        'Returned!',
+                        'Your order has been returned.',
+                        'success'
+                    ).then(() => {
+                        window.location.reload();
+                    });
+                } else {
+                    Swal.fire(
+                        'Error!',
+                        data.message,
+                        'error'
+                    );
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                Swal.fire(
+                    'Error!',
+                    'An error occurred while processing your request.',
+                    'error'
+                );
+            });
+        }
+    })
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     function confirmCancel(orderId) {
         Swal.fire({
             title: 'Are you sure?',
