--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -211,6 +211,7 @@
                                                         <option value="Processing" <%= data.orderStatus === 'Processing' ? 'selected' : '' %>>Processing</option>
                                                         <option value="Delivered" <%= data.orderStatus === 'Delivered' ? 'selected' : '' %>>Delivered</option>
                                                         <option value="Cancelled" <%= data.orderStatus === 'Cancelled' ? 'selected' : '' %>>Cancelled</option>
+                                                        <option value="Returned" <%= data.orderStatus === 'Returned' ? 'selected' : '' %>>Returned</option>
                                                     </select>      
                                                 </form>
                                             </td>
@@ -459,6 +460,7 @@ const rowsPerPage = 5;
 
         function updateOrderStatus(selectElement, userId, orderId) {
            const newStatus = selectElement.value;
+           
            fetch('/admin/checkOutStatus',{
             method:'POST',
             headers:{
@@ -469,14 +471,16 @@ const rowsPerPage = 5;
            .then((data)=>{
             if(data.success){
                 // console.log("data >>>",data);
-                document.getElementById('orderStatus').textContent = data.updatedCheckout.orderStatus;
                 const statusElement = document.getElementById(`orderStatus-${orderId}`);
-            if (statusElement) {
-                statusElement.textContent = data.updatedCheckout.orderStatus;
-                console.log(`Updated DOM for order ${orderId}`);
-            } else {
-                console.log(`Could not find DOM element for order ${orderId}`);
-            }
+                if (statusElement) {
+                    statusElement.textContent = data.updatedCheckout.orderStatus;
+                    console.log(`Updated DOM for order ${orderId}`);
+                } else {
+                    console.log(`Could not find DOM element for order ${orderId}`);
+                }
+
+              
+
                 swal.fire({
                     // icon:'success',
                     title:'Order status updated successfully!',
