--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -99,7 +99,7 @@
                     </div>
                     <div class="mb-3 px-3">
                         <label for="description" class="form-label">Description</label>
-                        <textarea class="form-control" id="description" rows="3" name="descriptionOfProduct"><%= locals.productDetails.description %></textarea>
+                        <textarea class="form-control" id="description" rows="10" name="descriptionOfProduct" style="resize: none;"><%= locals.productDetails.description %></textarea>
                     </div>
                 </div>
                
